--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 ext{
     roomVersion = "2.4.2"
     hiltVersion = "2.43.2"
+    nav_version = "2.5.3"
 }
 
 dependencies {
@@ -67,6 +68,10 @@ dependencies {
 
     //Desugaring api
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+
+    //Navigation component dependencies
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
